# nanofix-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
fix-client/: Cargo.toml
fix-client/examples/: fix_client.rs
fix-client/src/: constant.rs  lib.rs
fixclient/: Cargo.toml
fixv/: Cargo.toml
fixv/src/: fix_parser.rs  main.rs  protocol.rs
message/: Cargo.toml
message/src/: lib.rs  message.rs  messages.rs  msg_types.rs  tag.rs
src/: fixv.rs  lib.rs  nano_client.rs  protocol.rs
