[package]
name = "fixv"
version = "0.1.3"
edition = "2018"
authors = ["Mark Wardell <mark@submicro.net>"]
homepage = "https://github.com/subnano/nanofix-rs"
repository = "https://github.com/subnano/nanofix-rs"
readme = "README.md"
license = "MIT or Apache-2.0"
keywords = ["io", "network", "fix"]
publish = false

[dependencies]
atty = "0.2"
clap = "2.32.0"
colored = "1.6.1"
env_logger = "0.6.0"
log = "0.4.6"
