[package]
name = "nanofix_message"
version = "0.1.0"
edition = "2018"
authors = ["Mark Wardell <mark@submicro.net>"]
homepage = "https://github.com/subnano/nanofix-rs"
repository = "https://github.com/subnano/nanofix-rs"
readme = "README.md"
license = "MIT or Apache-2.0"
keywords = ["io", "network", "fix"]
publish = false

[dependencies]
log = "0.4.6"

